--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.0",
+    "graphql": "^16.3.0",
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-safe-area-context": "^3.3.2",
