--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^16.3.0",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "styled-components": "^5.3.3"
