--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "onedaychat",
   "version": "0.0.1",
   "private": true,
+  "homepage": "https://farzinmirzaie.github.io/one-day-chat",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -9,12 +10,15 @@
     "web-build": "rm -rf dist/ && webpack --mode=production --config webpack.config.js",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "predeploy": "npm run web-build",
+    "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.0",
+    "gh-pages": "^3.2.3",
     "graphql": "^16.3.0",
     "react": "17.0.2",
     "react-native": "0.67.1",
